# filter-and-view-dicom-directory

./: README.md
src/: CMakeLists.txt  ReadDICOMSeriesQt.cpp  ReadDICOMSeriesQt.h  ReadDICOMSeriesQt.ui
